added doctor controller and updated entity with Enums