@@ -3,10 +3,12 @@ package com.care.medi.services;
 import com.care.medi.dtos.request.AddressRequestDTO;
 import com.care.medi.dtos.response.AddressResponseDTO;
 import com.care.medi.entity.Address;
+import com.care.medi.entity.AddressType;
 import com.care.medi.entity.Users;
 import com.care.medi.exception.ResourceNotFoundException;
 import com.care.medi.repository.AddressRepository;
 import com.care.medi.repository.UserRepository;
+import com.care.medi.utils.Constants;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -38,37 +40,37 @@ public class AddressServiceImpl implements AddressService {
                 .postalCode(request.getPostalCode())
                 .country(request.getCountry())
                 .landmark(request.getLandmark())
-                .addressType(request.getAddressType())
+                .addressType(AddressType.valueOf(request.getAddressType()))
                 .isDefault(Boolean.TRUE.equals(request.getIsDefault()))
                 .build();
 
-        return toResponse(addressRepository.save(address));
+        return toAddressResponse(addressRepository.save(address));
     }
 
     // ── Read ──────────────────────────────────────────────────────────────────
 
     @Override
     public AddressResponseDTO getAddressById(Long id) {
-        return toResponse(
+        return toAddressResponse(
                 addressRepository.findById(id)
-                        .orElseThrow(() -> new ResourceNotFoundException(String.format("Address not found for this id : %d", id)))
+                        .orElseThrow(() -> new ResourceNotFoundException(Constants.ADDRESS_NOT_FOUND + id))
         );
     }
 
     @Override
     public List<AddressResponseDTO> getAddressesByUser(Long userId) {
         if (!userRepository.existsById(userId)) {
-            throw new ResourceNotFoundException("User not found for userId: " + userId);
+            throw new ResourceNotFoundException(Constants.USER_NOT_FOUND + userId);
         }
         return addressRepository.findByUserId(userId).stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(this::toAddressResponse)
+                .toList();
     }
 
     @Override
     public AddressResponseDTO getDefaultAddressByUser(Long userId) {
         Address address = addressRepository.findByUserIdAndIsDefaultTrue(userId).orElseThrow(() -> new ResourceNotFoundException(String.format("No Default address found for this user id : %d", userId)));
-        return toResponse(address);
+        return toAddressResponse(address);
     }
 
     // ── Update ────────────────────────────────────────────────────────────────
@@ -77,7 +79,7 @@ public class AddressServiceImpl implements AddressService {
     @Override
     public AddressResponseDTO updateAddress(Long id, AddressRequestDTO request) {
         Address address = addressRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(String.format("Address not found with id : %d", id)));
+                .orElseThrow(() -> new ResourceNotFoundException(Constants.ADDRESS_NOT_FOUND + id));
 
         if (request.getPhoneNumber() != null) address.setPhoneNumber(request.getPhoneNumber());
         if (request.getAddressLine1() != null) address.setAddressLine1(request.getAddressLine1());
@@ -87,16 +89,16 @@ public class AddressServiceImpl implements AddressService {
         if (request.getPostalCode() != null) address.setPostalCode(request.getPostalCode());
         if (request.getCountry() != null) address.setCountry(request.getCountry());
         if (request.getLandmark() != null) address.setLandmark(request.getLandmark());
-        if (request.getAddressType() != null) address.setAddressType(request.getAddressType());
+        if (request.getAddressType() != null) address.setAddressType(AddressType.valueOf(request.getAddressType()));
 
-        return toResponse(addressRepository.save(address));
+        return toAddressResponse(addressRepository.save(address));
     }
 
     @Transactional
     @Override
     public void setDefaultAddress(Long addressId, Long userId) {
         Address address = addressRepository.findById(addressId)
-                .orElseThrow(() -> new ResourceNotFoundException(String.format("Address not found with id : %d", addressId)));
+                .orElseThrow(() -> new ResourceNotFoundException(Constants.ADDRESS_NOT_FOUND+addressId));
 
         // Clear existing default, then mark the requested address as default
         addressRepository.clearDefaultByUserId(userId);
@@ -110,14 +112,14 @@ public class AddressServiceImpl implements AddressService {
     @Override
     public void deleteAddress(Long id) {
         if (!addressRepository.existsById(id)) {
-            throw new ResourceNotFoundException(String.format("Address not found with id : %d", id));
+            throw new ResourceNotFoundException(Constants.ADDRESS_NOT_FOUND + id);
         }
         addressRepository.deleteById(id);
     }
 
     // ── Helpers ───────────────────────────────────────────────────────────────
 
-    AddressResponseDTO toResponse(Address a) {
+    AddressResponseDTO toAddressResponse(Address a) {
         return AddressResponseDTO.builder()
                 .id(a.getId())
                 .userId(a.getUser() != null ? a.getUser().getId() : null)
@@ -129,7 +131,7 @@ public class AddressServiceImpl implements AddressService {
                 .postalCode(a.getPostalCode())
                 .country(a.getCountry())
                 .landmark(a.getLandmark())
-                .addressType(a.getAddressType())
+                .addressType(a.getAddressType().toString())
                 .isDefault(a.getIsDefault())
                 .createdAt(a.getCreatedAt())
                 .updatedAt(a.getUpdatedAt())
